force-app/main/default/objects/ssot__PriceAdjustmentGroup__dlm/fields/ssot__IsManuallyApplied__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsManuallyApplied__c</fullName>
    <label>Is Manually Applied</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsManuallyApplied</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>