force-app/main/default/objects/ssot__PriceAdjustmentGroup__dlm/fields/ssot__rel_1697761215436_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761215436_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PriceAdjustmentGroup_SalesOrderProdu_rel</label>
    <referenceTo>ssot__SalesOrderProductPriceAdjustment__dlm</referenceTo>
    <relationshipLabel>PriceAdjustmentGroup_SalesOrderProdu_rel</relationshipLabel>
    <relationshipName>rel_1697761215436_end</relationshipName>
    <type>Lookup</type>
</CustomField>