force-app/main/default/objects/ssot__PriceAdjustmentGroup__dlm/fields/ssot__rel_1697761215586_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761215586_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PriceAdjustmentGroup_CouponId_map_Co_rel</label>
    <referenceTo>ssot__Coupon__dlm</referenceTo>
    <relationshipLabel>PriceAdjustmentGroup_CouponId_map_Co_rel</relationshipLabel>
    <relationshipName>rel_1697761215586_end</relationshipName>
    <type>Lookup</type>
</CustomField>