force-app/main/default/objects/ssot__PriceAdjustmentGroup__dlm/fields/ssot__rel_1697761215670_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761215670_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PriceAdjustmentGroup_PromotionId_map_rel</label>
    <referenceTo>ssot__Promotion__dlm</referenceTo>
    <relationshipLabel>PriceAdjustmentGroup_PromotionId_map_rel</relationshipLabel>
    <relationshipName>rel_1697761215670_end</relationshipName>
    <type>Lookup</type>
</CustomField>