force-app/main/default/objects/ssot__PriceAdjustmentGroup__dlm/fields/ssot__SalesOrderPriceAdjustmentId__c.field-meta.xml
<CustomField>
    <fullName>ssot__SalesOrderPriceAdjustmentId__c</fullName>
    <label>Sales Order Price Adjustment</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SalesOrderPriceAdjustmentId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>