force-app/main/default/objects/ssot__PriceAdjustmentGroup__dlm/fields/ssot__SalesOrderPriceAdjustmentTypeID__c.field-meta.xml
<CustomField>
    <fullName>ssot__SalesOrderPriceAdjustmentTypeID__c</fullName>
    <label>Sales Order Price Adjustment Type Id</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SalesOrderPriceAdjustmentTypeID</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>